# sim

./: README.md  setup.bash
.devcontainer/: Dockerfile  devcontainer.json
src/moma_visualisation/: package.xml  setup.cfg  setup.py
src/moma_visualisation/config/: mapper_params_online_async.yaml  nav2_params.yaml  robot_controller.yaml
src/moma_visualisation/launch/: cam.launch.py  launch_sim.launch.py  localization.launch.py  navigation.launch.py  rsp.launch.py
src/moma_visualisation/meshes/: AMR_Platform.stl  chassis.stl
src/moma_visualisation/urdf/: amr_core.xacro  amr_lidar.xacro  camera.sdf  camera.urdf.xacro  chassis_core.xacro  gazebo_control.xacro  macro.gazebo.xacro  macro.tm12s-nominal.urdf.xacro  robot.urdf.xacro  tm12s_core.xacro
src/moma_visualisation/worlds/: obstacles.sdf
